--- a/index1.html
+++ b/index1.html
@@ -1,317 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Parallax Website</title>
-  <style>
-    :root{
-      --accent: #ff6b6b;
-      --dark: #0f1720;
-      --muted: #7b8794;
-      --max-width: 1100px;
-    }
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Digital Marketing | Team 7</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    *{box-sizing:border-box}
-    html,body{
-      height:100%;
-      margin:0;
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: #fafafa;
-      color: #111;
-      scroll-behavior:smooth;
-    }
+  <!-- Boxicons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    /* Header */
-    .site-header{
-      position:sticky;
-      top:0;
-      z-index:50;
-      backdrop-filter: blur(6px);
-      background: rgba(255,255,255,0.6);
-      border-bottom: 1px solid rgba(16,24,40,0.06);
-    }
-    .nav{
-      max-width: var(--max-width);
-      margin:0 auto;
-      display:flex;
-      gap:16px;
-      align-items:center;
-      padding:12px 20px;
-    }
-    .brand{
-      font-weight:700;
-      letter-spacing:0.6px;
-      color:var(--dark);
-      margin-right:auto;
-    }
-    .nav a{
-      text-decoration:none;
-      color:var(--dark);
-      padding:8px 12px;
-      border-radius:8px;
-      font-weight:600;
-    }
-    .nav a:hover{background: rgba(16,24,40,0.04)}
-
-    /* Hero / Parallax wrapper */
-    .parallax-section{
-      position:relative;
-      height:100vh;
-      min-height:560px;
-      overflow:hidden;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-
-    /* Parallax layers - absolute and cover */
-    .parallax-layer{
-      position:absolute;
-      left:0;
-      right:0;
-      top:0;
-      bottom:0;
-      background-position:center;
-      background-size:cover;
-      will-change:transform;
-      transform: translate3d(0,0,0);
-    }
-
-    /* content inside sections */
-    .content {
-      position:relative;
-      z-index: 5;
-      max-width:var(--max-width);
-      padding:40px 24px;
-      text-align:center;
-      color:#fff;
-      text-shadow: 0 6px 18px rgba(0,0,0,0.45);
-    }
-    .content h1{
-      font-size:clamp(28px,6vw,54px);
-      margin:0 0 12px;
-      line-height:1.02;
-    }
-    .content p{
-      color:rgba(255,255,255,0.95);
-      max-width:760px;
-      margin:0 auto 24px;
-      font-size:clamp(14px,1.6vw,18px);
-      line-height:1.45;
-    }
-    .cta{
-      display:inline-block;
-      background:var(--accent);
-      color:#fff;
-      padding:12px 20px;
-      border-radius:10px;
-      font-weight:700;
-      text-decoration:none;
-      box-shadow: 0 8px 30px rgba(255,107,107,0.15);
-    }
-
-    /* Mid content sections (no parallax background) */
-    .section{
-      padding:80px 20px;
-      max-width:var(--max-width);
-      margin:0 auto;
-    }
-    .cards{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-      gap:20px;
-      margin-top:24px;
-    }
-    .card{
-      background:#fff;
-      border-radius:12px;
-      padding:20px;
-      box-shadow: 0 6px 20px rgba(16,24,40,0.06);
-    }
-    .card h3{margin:0 0 8px;font-size:18px}
-    .card p{margin:0;color:var(--muted)}
-
-    /* Footer */
-    footer{
-      padding:40px 20px;
-      text-align:center;
-      color:var(--muted);
-    }
-
-    /* Smaller hero styles for second/third parallax sections */
-    .parallax-section.alt .content{ color:#0f1720; text-shadow:none }
-    .parallax-section.alt .content .cta{ background:#0f1720; color:#fff }
-
-    /* Responsive adjustments */
-    @media (max-width: 800px){
-      .nav{padding:10px}
-      .parallax-section{min-height:420px}
-    }
-
-    /* Accessibility: reduce motion preference */
-    @media (prefers-reduced-motion: reduce) {
-      .parallax-layer{ transition:none !important; will-change:auto !important; }
-      html,body { scroll-behavior: auto; }
-    }
-  </style>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="digitalmarketing.css">
+  <link rel="shortcut icon" href="img/Neon Green _T_ Logo Design.png" type="image/x-icon">
 </head>
 <body>
+  <!-- Header -->
+<header class="header">
+  <a href="#" class="logo"><img src="img/Neon Green _T_ Logo Design.png" alt="Team Seven Logo" width="110"></a>
+</header>
 
-  <!-- Header / nav -->
-  <header class="site-header" role="banner">
-    <div class="nav">
-      <div class="brand">YourBrand</div>
-      <nav aria-label="Primary navigation">
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
+
+  <!-- Digital Marketing Section -->
+  <section class="digital-section" id="digital">
+    <div class="digital-content">
+      <h1 class="heading animate-slide">Digital <span>Marketing</span></h1>
+      <br>
+      <h3 class="animate-fade">Grow Your Brand with Data-Driven Strategies</h3>
+      <p class="animate-fade">
+        At <strong>Team 7</strong>, we craft digital marketing solutions that help your business 
+        reach the right audience and achieve measurable growth. From SEO to paid ads, our strategies 
+        ensure maximum ROI and online visibility.
+      </p>
+      <ul class="digital-list">
+        <li class="animate-list">Search Engine Optimization (SEO)</li>
+        <li class="animate-list">Social Media Marketing</li>
+        <li class="animate-list">Pay Per Click (PPC) Campaigns</li>
+        <li class="animate-list">Email Marketing & Automation</li>
+        <br> 
+      </ul>
+      <a href="#contact" class="btn animate-btn">Start Campaign</a>
     </div>
-  </header>
-
-  <!-- PARALLAX SECTION 1 (Hero) -->
-  <section id="home" class="parallax-section">
-    <!-- background layers with data-speed controlling parallax intensity -->
-    <div class="parallax-layer" data-speed="0.15"
-         style="background-image:url('download.jpeg');"></div>
-    <div class="parallax-layer" data-speed="0.35"
-         style="background-image:url('https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?q=80&w=2000&auto=format&fit=crop'); mix-blend-mode: overlay; opacity:0.9;"></div>
-    <div class="parallax-layer" data-speed="0.6"
-         style="background-image:url('images.jpeg'); filter: saturate(1.05) contrast(1.05);"></div>
-
-    <div class="content" aria-hidden="false">
-      <h1>Beautiful parallax scrolling</h1>
-      <p>Craft immersive landing pages with layered backgrounds that move at different speeds — great for storytelling and hero sections.</p>
-      <a class="cta" href="#services">Explore services</a>
-    </div>
-  </section>
-
-  <!-- Content section -->
-  <section id="services" class="section">
-    <h2 style="text-align:center;">Services</h2>
-    <p style="text-align:center; color:var(--muted); max-width:820px; margin:8px auto 0;">
-      We combine design and motion to create delightful web experiences. Parallax is used sparingly for emphasis.
-    </p>
-
-    <div class="cards" aria-hidden="false">
-      <div class="card"><h3>Design</h3><p>Interface and visual design that communicates clearly.</p></div>
-      <div class="card"><h3>Development</h3><p>Fast, accessible, and modern front-end development.</p></div>
-      <div class="card"><h3>Animation</h3><p>Motion that enhances clarity and user flow.</p></div>
+    <div class="digital-img">
+      <img src="img/portfolio1.png" alt="Digital Marketing" width="450">
     </div>
   </section>
 
-  <!-- PARALLAX SECTION 2 (Alt look) -->
-  <section class="parallax-section alt" aria-label="Parallax section 2">
-    <div class="parallax-layer" data-speed="0.2"
-      style="background-image:url('download.jpeg');"></div>
-    <div class="parallax-layer" data-speed="0.5"
-      style="background-image:linear-gradient(120deg, rgba(255,255,255,0.85), rgba(255,255,255,0.65));"></div>
+  <!-- My Work Section -->
 
-    <div class="content">
-      <h1>Engaging storytelling</h1>
-      <p style="color:rgba(15,23,32,0.85); text-shadow:none">Use parallax to guide attention—combine imagery, headings, and short copy to tell a story.</p>
-      <a class="cta" href="#about">Learn more</a>
+  <!---- New Footer-->
+    <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- Logo / About -->
+      <div class="footer-col">
+        <a href="#" class="logo"><img src="img/Neon Green _T_ Logo Design.png" alt="Team Seven Logo" width="80"></a>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="footer-col">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#portfolio">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Services -->
+      <div class="footer-col">
+        <h4>Services</h4>
+        <ul>
+          <li><a href="#">SEO Optimization</a></li>
+          <li><a href="#">Social Media Marketing</a></li>
+          <li><a href="#">PPC Campaigns</a></li>
+          <li><a href="#">Email Marketing</a></li>
+        </ul>
+      </div>
+
+      <!-- Social Media -->
+      <div class="footer-col">
+        <h4>Follow Us</h4>
+        <div class="social-links">
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+          <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+      </div>
     </div>
-  </section>
 
-  <!-- About section -->
-  <section id="about" class="section">
-    <h2 style="text-align:center">About</h2>
-    <p style="text-align:center; color:var(--muted); max-width:820px; margin:8px auto 0;">
-      This template uses a performant JS loop to move layer positions. On touch devices or when users prefer reduced motion, the parallax is disabled for comfort and performance.
-    </p>
-  </section>
-
-  <!-- PARALLAX SECTION 3 (Call to action) -->
-  <section class="parallax-section" aria-label="Parallax section 3">
-    <div class="parallax-layer" data-speed="0.18"
-      style="background-image:url('download.jpeg'); opacity:0.95;"></div>
-    <div class="parallax-layer" data-speed="0.45"
-      style="background-image:linear-gradient(120deg, rgba(16,24,40,0.45), rgba(16,24,40,0.25));"></div>
-
-    <div class="content">
-      <h1>Get started</h1>
-      <p>Ready to add parallax to your site? Use high-quality images and keep copy short — motion should highlight content, not distract from it.</p>
-      <a class="cta" href="#contact">Contact us</a>
-    </div>
-  </section>
-
-  <!-- Contact / Footer -->
-  <section id="contact" class="section">
-    <h2 style="text-align:center">Contact</h2>
-    <p style="text-align:center; color:var(--muted); max-width:720px; margin:8px auto 20px;">
-      Email: hello@example.com — Phone: +1 555 123 456
-    </p>
-    <div style="text-align:center; margin-top:8px;">
-      <a class="cta" href="mailto:hello@example.com">Send message</a>
-    </div>
-  </section>
-
-  <footer>
-    <div style="max-width:var(--max-width); margin:0 auto; padding:8px 24px;">
-      © <span id="year"></span> YourBrand • Built with care
+    <div class="footer-bottom">
+      <p>© 2025 Team 7. All Rights Reserved.</p>
     </div>
   </footer>
 
-  <script>
-    // ----- Parallax engine (lightweight) -----
-    (function(){
-      const layers = Array.from(document.querySelectorAll('.parallax-layer'));
-      const reduceMotion = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-      const isTouch = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
-
-      // If user prefers reduced motion or it's a touch device, do nothing
-      const enabled = !(reduceMotion || isTouch);
-
-      // store last known scroll position
-      let latestScroll = 0;
-      let ticking = false;
-
-      function update() {
-        const scrollY = latestScroll;
-        const vh = window.innerHeight;
-
-        layers.forEach(layer => {
-          const speed = parseFloat(layer.dataset.speed) || 0.3;
-          // create a parallax offset based on scroll position
-          // moving the background vertically; negative = move up slower than scroll
-          const offset = (scrollY - layer.parentElement.offsetTop) * speed;
-          // apply transform (translateY) for smooth GPU-accelerated motion
-          layer.style.transform = `translate3d(0, ${offset}px, 0)`;
-        });
-
-        ticking = false;
-      }
-
-      function onScroll() {
-        latestScroll = window.scrollY || window.pageYOffset;
-        if (!ticking) {
-          requestAnimationFrame(update);
-          ticking = true;
-        }
-      }
-
-      if (enabled) {
-        window.addEventListener('scroll', onScroll, {passive:true});
-        // trigger initial position
-        latestScroll = window.scrollY || window.pageYOffset;
-        requestAnimationFrame(update);
-      } else {
-        // Fallback: position layers statically (no transform)
-        layers.forEach(layer => layer.style.transform = 'none');
-      }
-
-      // small DOM helpers
-      // Update footer year
-      document.getElementById('year').textContent = new Date().getFullYear();
-
-      // Enhance anchor links: close focus for accessibility
-      document.querySelectorAll('a[href^="#"]').forEach(a=>{
-        a.addEventListener('click', () => a.blur());
-      });
-    })();
-  </script>
+  <!-- Script -->
+  <script src="digitalmarketing.js"></script>
 </body>
 </html>
